--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "animejs": "3.2.0",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -19,6 +20,7 @@
     "typescript": "4.0.2"
   },
   "devDependencies": {
+    "@types/animejs": "3.1.2",
     "@types/node": "14.6.1",
     "@types/react": "16.9.48",
     "@types/socket.io": "^2.1.11",
