--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.4.0",
     "animejs": "3.2.0",
-    "next": "9.5.2",
+    "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "socket.io": "2.3.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "2.3.0",
     "typescript": "4.0.2"
   },
   "devDependencies": {
     "@types/animejs": "3.1.2",
-    "@types/node": "14.6.1",
-    "@types/react": "16.9.48",
-    "@types/socket.io": "^2.1.11",
-    "@types/socket.io-client": "^1.4.33",
+    "@types/node": "14.6.3",
+    "@types/react": "16.9.49",
+    "@types/socket.io": "2.1.11",
+    "@types/socket.io-client": "1.4.33",
     "prettier": "2.1.1"
   }
 }
